fix center white space

--- a/src/components/game.styl
+++ b/src/components/game.styl
@@ -160,7 +160,7 @@ img
   font-weight bold
   height $base * 4
   justify-items center
-  left $base * 17
+  left $base * 16.98
   line-height $base * 0.7
   position absolute
   top $base * 18
